add site header and site header styles

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project</title>
+  <title>Coffee Roasters</title>
 
   <!-- Favicon -->
   <!-- <link rel="icon" href=""> -->
@@ -23,23 +23,20 @@
 
       <!-- LOGO -->
       <a class="site-header__logo logo" href="index.html">
-        <img class="logo__img" src="" alt="" width="" height="">
+        <img class="logo__img" src="images/logo.svg" alt="Coffee roasters logo" width="235" height="24">
       </a>
 
       <!-- SITENAV -->
       <nav class="sitenav">
         <ul class="sitenav__list">
           <li class="sitenav__item">
-            <a href="#" class="sitenav__link"></a>
+            <a href="#" class="sitenav__link">Home</a>
           </li>
           <li class="sitenav__item">
-            <a href="#" class="sitenav__link"></a>
+            <a href="#" class="sitenav__link">About us</a>
           </li>
           <li class="sitenav__item">
-            <a href="#" class="sitenav__link"></a>
-          </li>
-          <li class="sitenav__item">
-            <a href="#" class="sitenav__link"></a>
+            <a href="#" class="sitenav__link">Create your plan</a>
           </li>
         </ul>
       </nav>
