update header and hero section

--- a/index.html
+++ b/index.html
@@ -17,43 +17,60 @@
 
 <body>
 
-  <!-- HEADER -->
-  <header class="site-header">
-    <div class="site-header__container container">
+  <!-- SITE HEADER AND HERO -->
+  <div class="site-header-hero__wrapper">
+    <!-- HEADER -->
+    <header class="site-header">
+      <div class="site-header__container container">
 
-      <!-- LOGO -->
-      <a class="site-header__logo logo" href="index.html">
-        <img class="logo__img" src="images/logo.svg" alt="Coffee roasters logo" width="235" height="24">
-      </a>
+        <!-- LOGO -->
+        <a class="site-header__logo logo" href="index.html">
+          <img class="logo__img" src="images/logo.svg" alt="Coffee roasters logo" width="235" height="24">
+        </a>
 
-      <!-- SITENAV -->
-      <nav class="sitenav">
-        <ul class="sitenav__list">
-          <li class="sitenav__item">
-            <a href="#" class="sitenav__link">Home</a>
-          </li>
-          <li class="sitenav__item">
-            <a href="#" class="sitenav__link">About us</a>
-          </li>
-          <li class="sitenav__item">
-            <a href="#" class="sitenav__link">Create your plan</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-  <!-- /HEADER -->
-
-  <!-- MAIN CONTENT -->
-  <main class="main-content">
+        <!-- SITENAV -->
+        <nav class="sitenav">
+          <ul class="sitenav__list">
+            <li class="sitenav__item">
+              <a href="#" class="sitenav__link">Home</a>
+            </li>
+            <li class="sitenav__item">
+              <a href="#" class="sitenav__link">About us</a>
+            </li>
+            <li class="sitenav__item">
+              <a href="#" class="sitenav__link">Create your plan</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <!-- /HEADER -->
 
     <!-- HERO -->
     <section class="hero">
       <div class="hero__wrapper container">
-
+        <div class="hero__content">
+          <h2 class="hero__heading">
+            Good coffee is made simply.
+          </h2>
+          <p class="hero__description">
+            Start your mornings with the world’s best coffees. Try our expertly curated artisan coffees from our best
+            roasters delivered directly to your door, at your schedule.
+          </p>
+          <a class="hero__link button button--green" href="#">Create your plan</a>
+        </div>
+        <img class="hero__img" src="images/hero-img.jpg" alt="coffee and cup image" width="710" height="696"
+          srcset="images/hero-img.jpg 1x, images/hero-img@2x.jpg 2x">
       </div>
     </section>
     <!-- /HERO -->
+  </div>
+  <!-- /SITE HEADER AND HERO -->
+
+  <!-- MAIN CONTENT -->
+  <main class="main-content">
+
+
 
   </main>
   <!-- /MAIN CONTENT -->
