--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
           </p>
           <a class="hero__link button button--green" href="#">Create your plan</a>
         </div>
-        <img class="hero__img" src="images/hero-img.jpg" alt="coffee and cup image" width="710" height="696"
-          srcset="images/hero-img.jpg 1x, images/hero-img@2x.jpg 2x">
+        <img class="hero__img hero__img--index" src="images/hero-img.jpg" alt="coffee and cup image" width="710"
+          height="696" srcset="images/hero-img.jpg 1x, images/hero-img@2x.jpg 2x">
       </div>
     </section>
     <!-- /HERO -->
