add new custom props

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             Start your mornings with the world’s best coffees. Try our expertly curated artisan coffees from our best
             roasters delivered directly to your door, at your schedule.
           </p>
-          <a class="hero__link button button--green" href="#">Create your plan</a>
+          <a class="hero__link button button--brown" href="#">Create your plan</a>
         </div>
         <img class="hero__img hero__img--index" src="images/hero-img.jpg" alt="coffee and cup image" width="710"
           height="696" srcset="images/hero-img.jpg 1x, images/hero-img@2x.jpg 2x">
